<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.its.vdv.views.LoadableImageView_
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:riv_corner_radius="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_1"/>

        <com.its.vdv.views.FeedItemImagesView_
            android:id="@+id/feed_images"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_like"
            android:tint="@color/red"
            android:contentDescription="@string/img_desc"/>

        <TextView
            android:id="@+id/likes_label_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_view_no_likes"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/likes_label_not_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_view_has_likes"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@color/gray_4"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/see_more_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/feed_view_more_text"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/comments_list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:id="@+id/comments"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_comment"
                android:tint="@color/gray_4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/feed_view_comment"
                android:textSize="14sp"
                android:textColor="@color/gray_4"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/geo_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textColor="@color/gray_4"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_map"
                android:tint="@color/gray_4"
                android:contentDescription="@string/img_desc"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>